# vscode-cpp-cmake-mysql-pistache-test05

./: .gitignore  CMakeLists.txt
application/: CMakeLists.txt
application/src/: main.cpp
application/src/modules/a/: CMakeLists.txt  module_a1.cpp  module_a2.cpp
application/src/modules/a/includes/: module_a1.h  module_a2.h
application/src/modules/b/: CMakeLists.txt  module_b1.cpp  module_b2.cpp
application/src/modules/b/includes/: module_b1.h  module_b2.h
extern_libs/: CMakeLists.txt
extern_libs/lib_a/: CMakeLists.txt
extern_libs/lib_a/include/: a1.h  a2.h
extern_libs/lib_a/src/: a1.cpp  a2.cpp
extern_libs/lib_b/: CMakeLists.txt
extern_libs/lib_b/include/: b1.h  b2.h
extern_libs/lib_b/src/: b1.cpp  b2.cpp
extern_libs/mysql/: CMakeLists.txt
extern_libs/mysqlpp/: CMakeLists.txt
extern_libs/pistache/: CMakeLists.txt
extern_libs/pistache/include/pistache/: version.h
